# irc-server

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  feachure.cpp  ircserv.conf  motd  ngircd.conf
certs/: localhost.crt  localhost.key
server_test/: config.py  main.py  mode_test.py  nick_user_test.py  nothing_test.py  oper_test.py  pass_server.py  pass_test.py  ping_pong_test.py  setup_ngircd.sh  squit_test.py  test_class.py  time_test.py  utils.py
src/: Connection.cpp  Delete.cpp  Find.cpp  Reply.cpp  Server.cpp  Server.hpp  main.cpp  register.cpp
src/command/: Admin.cpp  Admin.hpp  Away.cpp  Away.hpp  Connect.cpp  Connect.hpp  DecCommandExecution.cpp  DecCommandExecution.hpp  Die.cpp  Die.hpp  Error.cpp  Error.hpp  Info.cpp  Info.hpp  Invite.cpp  Invite.hpp  Ison.cpp  Ison.hpp  Join.cpp  Join.hpp  Kick.cpp  Kick.hpp  Kill.cpp  Kill.hpp  Links.cpp  Links.hpp  List.cpp  List.hpp  Lusers.cpp  Lusers.hpp  Mode.cpp  Mode.hpp  Motd.cpp  Motd.hpp  Msg.cpp  Msg.hpp  NJoin.cpp  NJoin.hpp  Names.cpp  Names.hpp  (+72 more)
src/configuration/: Configuration.cpp  Configuration.hpp
src/interfaces/: ACommand.cpp  ACommand.hpp  IChannel.hpp  IClient.hpp  ICommand.hpp  IMods.hpp  IServerForCmd.hpp  ISocketKeeper.hpp
src/loggers/: BigLogger.cpp  BigLogger.hpp  CommandLogger.cpp  CommandLogger.hpp  ConnectLogger.cpp  ConnectLogger.hpp  NickLogger.cpp  NickLogger.hpp  RxTxLogger.cpp  RxTxLogger.hpp  ServerLogger.cpp  ServerLogger.hpp  ServerSelfInfo.cpp  ServerSelfInfo.hpp
src/models/: ChannelMods.cpp  ChannelMods.hpp  DecCommandExecution.cpp  DecCommandExecution.hpp  Modes.cpp  Modes.hpp  RequestForConnect.cpp  RequestForConnect.hpp  ServerInfo.cpp  ServerInfo.hpp  Service.cpp  Service.hpp  StandardChannel.cpp  StandardChannel.hpp  User.cpp  User.hpp  UserChannelPrivileges.cpp  UserChannelPrivileges.hpp  UserMods.cpp  UserMods.hpp
src/parsing/: Parser.cpp  Parser.hpp
src/replies/: ReplyForwarder.cpp  ReplyForwarder.hpp  ReplyList.cpp  ReplyList.hpp  fullStrNotify.hpp
src/ssl/: SSLConnection.cpp  SSLConnection.hpp
src/tools/: debug.hpp  tools.cpp  tools.hpp
src/types/: Wildcard.cpp  Wildcard.hpp  types.hpp
unit_test/: CMakeLists.txt  channels.cpp  features.cpp  wildcard.cpp
unit_test/server_test/: commands  ngircd.conf  pass_server.py  pass_server.sh  python_tests.py  result.txt  setup_ngircd.sh  test.py  test_module.py  utils.py
